# bravs

./: .coverage  .gitignore  README.md  pyproject.toml
baseball_metric/: __init__.py  __main__.py  run.py
bravs_engine/: Cargo.toml
data/: aging_curves_by_position.csv  aging_curves_hitters.csv  aging_curves_pitchers.csv  bravs_careers.csv  bravs_top_100_all_time.csv  career_trajectories.csv  clutch_analysis.csv  development_profiles.csv  dynasty_windows.csv  era_context_features.csv  hof_probabilities.csv  id_crosswalk.csv  manager_careers.csv  manager_careers_v2.csv  manager_careers_v3.csv  manager_postseason.csv  manager_seasons.csv  manager_seasons_v2.csv  manager_seasons_v3.csv  pitch_design_profiles.csv  pitcher_arsenal_grades.csv  playoff_probabilities_2026.csv  positional_flexibility.csv  projections_2026.csv  prospect_rankings.csv  prospect_rankings_nn.csv  salaries_all.csv  salary_analysis.csv  team_continuity.csv  team_power_rankings.csv  team_win_predictions.csv  team_year_war.csv  war_jumps.csv
docs/: 01-war-autopsy.md  02-literature-review.md  03-axioms.md  04-metric-specification.md  05-methodology-deep-dive.md  06-design-decisions.md  07-self-critique.md  API.md  lineup-optimizer-findings.md  lineup-optimizer-methodology.md  synthetic-data-methodology.md
logs/: 2012_al_mvp_race.json
models/: hof_classifier.pt  lineup_value_model.pt  manager_model.pt  manager_model_v2.pt  manager_model_v3.pt  player_autoencoder.pt  prospect_net.pt  universal_player_transformer.pt  win_model.pt  win_probability.pt
scripts/: active_hof_check.py  aging_cliffs.py  all_award_races.py  analyze_2012_mvp.py  analyze_managers_2024.py  assemble_2026.py  best_by_position.py  best_pitching.py  best_teams_ever.py  build_statcast_features.py  compute_everything.py  compute_milb.py  compute_wpa.py  controversial_races.py  download_milb_2026.py  download_retrosheet_events.py  download_savant_tables.py  download_statcast_data.py  download_statcast_pbp.py  dream_team.py  dynasty_rankings.py  goat_analysis.py  hof_classifier.py  lahman_hof_classifier.py  live_mvp_race.py  parse_postseason_gamelogs.py  parse_retrosheet_events.py  parse_retrosheet_gamelogs.py  pitcher_card.py  player_report.py  player_similarity.py  rerun_all_analyses.py  run_lineup_backtest.py  (+24 more)
(+523 files in other folders)
