[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bravs"
version = "3.8.0"
description = "BRAVS — Bayesian Runs Above Value Standard: probabilistic baseball analytics with GPU acceleration, 523K player-seasons, 7 PyTorch models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["baseball", "sabermetrics", "war", "analytics", "statcast", "mlb", "milb", "pytorch"]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "torch>=2.0",
    "scikit-learn>=1.3",
    "pybaseball>=2.3",
    "flask>=3.0",
    "requests>=2.28",
    "matplotlib>=3.7",
]

[project.scripts]
bravs-web = "web.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.3",
    "pytest-cov>=4.1",
    "ruff>=0.1.0",
    "mypy>=1.5",
    "pandas-stubs>=2.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
